# maestro-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config.py  maestro.py  openapi-merged.json  package-lock.json  package.json  pyproject.toml  top_endpoints_bitcoin
.github/scripts/: version
.github/workflows/: ci.yml
prompts/: prompts.py
public/: index.html
src/: index.ts  streamable-http.ts
