[project]
name = "maestro-mcp"
version = "0.1.0"
authors = [{name = "Maestro", email = "support@gomaestro.org"}]
description = "An MCP server for communicating with the Maestro Bitcoin RPC API"
readme = "README.md"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
keywords = ["bitcoin", "rpc", "rpc-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
     "Topic :: Software Development :: Build Tools"
]
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]
[project.urls]
Homepage = "https://gomaestro.org"
Documentation = "https://docs.gomaestro.org"
Repository = "https://github.com/maestro-org/maestro-mcp"
Issues = "https://github.com/maestro-org/maestro-mcp/issues"
